--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -186,7 +186,11 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		 uiHeader: true,hideGCLogo: true,hideGILogo: false,
 		 view: map_engine,
 		 core_host:	 proxy_host + '/', finder_host:proxy_host + '/', maker_host: proxy_host + '/',
+		 onMapReady: function() { log("onMapReady!!") },
 		 onMapLoaded: function() { self.loadedMap() },
+		 onFeatureSelected: function(features) { if(self.country == "World" && features.features.length > 0) {
+		     var country = features.features[0]; window.location = "/" + country.region.toLowerCase() + "/" + country.country.toLowerCase().replace(/\s+/,'-') ;
+		 }},
 		 flashvars: {country: self.country}
 		 });
 	  } else {
@@ -324,7 +328,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
     	  s_attr.icon.selectedAttribute = attribute;
 	      self.map.setLayerStyle(self.stylelayers[indicator].order, s_attr);
 	  }
-	  self.map.addLayerInfoWindowFilter(self.stylelayers[indicator].order, {
+	  self.map.setLayerInfoWindow(self.stylelayers[indicator].order, {
 	        title: F1.WorldBank.extractives[indicator]["infoWindowFilter"]["title"], 
 	        subtitle: s_attr["infoWindowFilter"]["subtitle"], tabs: F1.WorldBank.extractives[indicator]["infoWindowFilter"]["tabs"]});
 	  jq('#layercontrol_extractives').html(title);
@@ -642,7 +646,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		
 		//infotabs.push({title:"Other Indicators", type: "text", value: "Maternal health: $[Maternal health]% of births attended by skilled health provider\nInfant mortality: $[Infant mortality] per 1000 live births\nMalnutrition: $[Malnutrition]%\nUnemployment rate: $[Unemployment rate]%\nRegional population: $[Regional population] people\nRegional population year: $[Regional population year]\nWealth quintile - highest: $[Wealth quintile - highest]%\nWealth quintile - second highest: $[Wealth quintile - second highest]%\nWealth quintile - fourth highest: $[Wealth quintile - fourth highest]%\nWealth quintile - lowest: $[Wealth quintile - lowest]%\nWealth quintile - middle: $[Wealth quintile - middle]%\nFor further information about these indicators, refer to the <a href='http://maps.worldbank.org/extractives/about' target='_new'>About page</a>"})
 		try {
-    		self.map.addLayerInfoWindowFilter(self.stylelayers[indicator].order, {title: indicator + ": $["+ F1.WorldBank.indicators[indicator].styles.fill.selectedAttribute +"]", subtitle: infosub, tabs:infotabs});
+    		self.map.setLayerInfoWindow(self.stylelayers[indicator].order, {title: indicator + ": $["+ F1.WorldBank.indicators[indicator].styles.fill.selectedAttribute +"]", subtitle: infosub, tabs:infotabs});
 
     		self.map.setLayerTitle(self.stylelayers[indicator].order, F1.WorldBank.indicators[indicator].title);
     		self.map.setLayerSubTitle(self.stylelayers[indicator].order, F1.WorldBank.indicators[indicator].subtitle);
@@ -671,8 +675,10 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  this.map.clearHighlights(self.stylelayers["Mines"].order);
 	  this.map.addHighlight(self.stylelayers["Mines"].order,{expression: highlightExpression});
 	},
-	highlightProject: function(project_id) {
+	highlightProject: function(project_id, project_name) {
 	  var self = this;
+      jq("#sector_funding_description").html(project_name.capitalize());
+      jq("#sector_funding_description").show();
 	  var highlightExpression = "$[project id] == '"+project_id+"'";
 	  this.map.clearHighlights(self.stylelayers["Project Locations"].order);
 	  this.map.addHighlight(self.stylelayers["Project Locations"].order,{expression: highlightExpression});
@@ -818,17 +824,19 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		var funding = 0;
 		var sector_names = "";
 		var opts = {}
-		var width = 420;
-		var char_length = 24;
+		var width = 410;
+		var char_length = 25;
 		if( self.country == "World") {
 		    width = 640;
-		    char_length = 45;
+		    char_length = 47;
 		    }
 
 		if(refreshControls === undefined || refreshControls === null || refreshControls == true){
 			self.toggleSector("all", false, false); // watch recursion
 			self.toggleSector(sector_name, true,false); // watch recursion
 		}
+		jq("#sector_funding_description").html(sector_name.capitalize());
+		jq("#sector_funding_description").show();
 		var projects = []
 		var links = []
 		var colors = [];
@@ -878,7 +886,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 			var links = jq.map(projects, function (project,index) { 
 				labels.push(Textify.elide_during(project.project_name, 15, '...'   ) + " - $" + project.sector_funding[sector_name].toFixed(2) + "m" )
-				return "javascript:wb.highlightProject('" + project["id"] + "');";	
+				return "javascript:wb.highlightProject('" + project["id"] + "', '" + project["project_name"] + "');";	
 			});
 
 			pie_options = {"features":projects, 
@@ -996,10 +1004,10 @@ if(typeof(F1)=='undefined') {F1 = {};}
       for(var key in self.regions){ if(key != "OTHER") {keys.push(key);} }
       
 	  jq.each(keys.sort(), function(i,s) {
-		features.push({name: s, financing: self.regions[s]});
-		values.push(self.regions[s]/1000)
+		features.push({name: s, financing: self.regions[s].financing});
+		values.push(self.regions[s].financing/1000)
 		labels.push(s.wordwrap(8, "\n", false).toLowerCase().capitalize())
-		links.push("#" + s);
+		links.push("/" + self.regions[s].shortname);
 	  });
 
 	  jq('#funding_total').hide();
@@ -1020,7 +1028,10 @@ if(typeof(F1)=='undefined') {F1 = {};}
       var fout = function () {
           this.flag.animate({opacity: 0}, 300, function () {this.remove();});
       }
-      r.g.barchart(0, 10, 440, 170, [values], bar_options).hover(fin, fout);;
+      r.g.barchart(0, 10, 440, 170, [values], bar_options).hover(fin, fout).click(function(e) { 
+          window.location = links[this.bar.index];
+         // wb.loadProjects(1865)
+          });
       // r.g.axis(x_start, y_start, x_width, from, to, steps, orientation, labels, type, dashsize)
       axis = r.g.axis(37,200,435,null,null,labels.length,2,labels, " ", 0);
       axis.text.attr({font:"12px 'Fontin Sans', Fontin-Sans, sans-serif", fill:"#333", "font-weight": "regular", "color": "#333"});
@@ -1157,6 +1168,11 @@ if(typeof(F1)=='undefined') {F1 = {};}
             
         return false;
     },
+    loadProjects: function(dataid) {
+        var self = this;
+        self.map.addLayer({source:"finder:" + dataid, categoryFilter: {attribute:major_sector_name,categories:self.wbicons}, styles: {opacity: 1.0}, zoomToExtent: true })
+
+    },
         styleMap: function() {
             var self = this;
             log("styleMap", self.stylelayers)
@@ -1167,32 +1183,35 @@ if(typeof(F1)=='undefined') {F1 = {};}
             // infowindow
             if(self.stylelayers["Project Locations"] !== undefined) {
                 if(self.country == "Development Marketplace") {
-                     self.map.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$["+major_sector_name+"]", tabs:[{title: "About", type: "text", value:"Project: <a target='_new' href='$[source url]'>$[project title]</a>\nYear Funded: $[approval date]\nFunding Amount:$ $[total amt]\nObjective:\n$[development objective]"}, {title: "Location", type: "text", value: "$[geoname], $[country]\n$[region]"}]});
+                     self.map.setLayerInfoWindow(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$["+major_sector_name+"]", tabs:[{title: "About", type: "text", value:"Project: <a target='_new' href='$[source url]'>$[project title]</a>\nYear Funded: $[approval date]\nFunding Amount:$ $[total amt]\nObjective:\n$[development objective]"}, {title: "Location", type: "text", value: "$[geoname], $[country]\n$[region]"}]});
                 } else {
-                self.map.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$["+major_sector_name+"]", tabs:[{title: "About", type: "text", value:"Project ID: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]</a>\nProject Name: $[project title]\nSector:$["+major_sector_name+"]\nObjective:\n$[development objective]"}, {title: "Location", type: "text", value: "Province: $[adm1]\nDistrict: $[adm2]\nGeoname: $[geoname]\n\nDescription:\n$[precision description]"},
+                self.map.setLayerInfoWindow(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$["+major_sector_name+"]", tabs:[{title: "About", type: "text", value:"Project ID: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]</a>\nProject Name: $[project title]\nSector:$["+major_sector_name+"]\nObjective:\n$[development objective]"}, {title: "Location", type: "text", value: "Province: $[adm1]\nDistrict: $[adm2]\nGeoname: $[geoname]\n\nDescription:\n$[precision description]"},
                 {title:"Results", type: "text", value: "$[results]"}
                 ]});
                 }
             }
             if(self.stylelayers["Project Counts"] !== undefined) {
-                self.map.addLayerInfoWindowFilter(self.stylelayers["Project Counts"].order, {title: "Activities: $[project count]", subtitle: "$[adm1] $[adm2]", tabs:[{title:"About", type:"text", value: "Counts are determined by the total number of activities working within or at this administrative level."}]});
+                self.map.setLayerInfoWindow(self.stylelayers["Project Counts"].order, {title: "Activities: $[project count]", subtitle: "$[adm1] $[adm2]", tabs:[{title:"About", type:"text", value: "Counts are determined by the total number of activities working within or at this administrative level."}]});
             }
         },
         styleLegend: function() {
             // for embedded maps
             var y = 50;
             var ch = jq("#map-content-hdr2");
-            if (ch !== undefined && ch.length == 0)
-            y = 20
-
-            this.map.setStyle( {legend: {  visible: true, bgColor:0x92948C, btnBgColor:0x92948C, btnPlacement:"horizontal", btnFontColor:0xFFFFFF, bgAlpha: 0.7, btnBgAlpha:0.7,offset:{x:0,y:0}}});
-            if(!this.embed){
-                this.map.setStyle( { zoom: { visible: true, expanded: true, bgColor: 0x92948C, authHeight: false, height:100, cornerRadius: 5, offset: {x:15,y:50}}})
-            } else {
-                this.map.setStyle( { zoom: { visible: true, expanded: true, bgColor: 0x92948C, authHeight: false, height:10, cornerRadius: 5, expanded: false, horizontal: true, offset: {x:15,y:y}}}) 
+            if (ch !== undefined && ch.length == 0) {
+                y = 20
+            } else if ( this.thematic_area != "m4r") {
+                y = 80
             }
 
-            this.map.setMapStyle( { tooltip: { visible: true } } )
+            this.map.setMapStyle( {legend: {  visible: true, bgColor:0x92948C, btnBgColor:0x92948C, btnPlacement:"horizontal", btnFontColor:0xFFFFFF, bgAlpha: 0.7, btnBgAlpha:0.7,offset:{x:0,y:0}}});
+            if(!this.embed){
+                this.map.setMapStyle( { zoom: { visible: true, expanded: true, bgColor: 0x92948C, authHeight: false, height:100, cornerRadius: 5, offset: {x:15,y:y}}})
+            } else {
+                this.map.setMapStyle( { zoom: { visible: true, expanded: true, bgColor: 0x92948C, authHeight: false, height:10, cornerRadius: 5, expanded: false, horizontal: true, offset: {x:15,y:20}}}) 
+            }
+
+            // this.map.setMapStyle( { tooltip: { visible: false } } )
 
             return false;
         },
@@ -1209,6 +1228,35 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	hideLoading: function() {
 	  jq("#loading").hide();
 	  jq(".loaded").show();
+	},
+	hoverWindow: function(layer_index,tooltip) {
+	    var self = this;
+        self.map.setMapStyle({tooltip: {visible: false}})
+        if(tooltip != "count") self.map.setLayerTooltip(layer_index,{title: tooltip})
+        var infodiv = document.createElement("div");
+        infodiv.id = "infodiv";
+        infodiv.setAttribute("style", "padding: 3px; top: -1000; left: -1000; display: block;max-width: 100px; position: absolute; background-color: #92948C; opacity:0.9; filter:alpha(opacity=90)");
+        var parent = document.getElementById("wb_map");
+        parent.insertBefore(infodiv, parent.childNodes[0]);
+        wb.map.setCallback("onFeatureHover", function(obj) { 
+            if(obj.features !== null && obj.features.length != 0){
+                var text = ""
+                // self.map.addHighlight(layer_index, {expression: "$[country] == '" + obj.features[0].country + "'"})
+                if(tooltip == "count") {text = obj.features.length + " projects<br />";
+                    jq.each(obj.features, function(index,feature) {
+                        text += "<img src='" + self.wbicons[feature["mjsector 1"]] + "' />";
+                    })
+                }
+                else { text = obj.tooltip; }
+                infodiv.innerHTML =  "<span>" + text + "</span>"
+                infodiv.style.opacity = "0.9";
+                infodiv.style.left = (obj.point.x + 10) + "px";
+                infodiv.style.top = (obj.point.y - 10) + "px";
+            } else {
+                // self.map.clearHighlights(layer_index);
+                infodiv.style.opacity = "0";
+            }            
+        })
 	},
     drawCharts: function() {
         var self = this;
@@ -1228,13 +1276,19 @@ if(typeof(F1)=='undefined') {F1 = {};}
         // self.toggleSector("counts_admin1",true);
         count = self.country_attrs["projects_count"];
         if(self.thematic_area == 'm4r'){
+            log("toggleSector")
             self.toggleSector("all",true,false);
             jq('#project_count').html(count);
-            if(count == 1)
-            jq('#active_projects_header').html("active project working in")
+            if(count == 1){
+                jq('#active_projects_header').html("active project working in")
+            }
             jq('#activity_count').html(self.country_attrs["locations_count"]);
-            if(self.country_attrs["locations_count"] == 1)
-            jq('#mapped_locations_header').html("mapped location")
+            if(self.country_attrs["locations_count"] == 1) {
+                jq('#mapped_locations_header').html("mapped location")
+            }
+            log("finish header")
+
+            self.hoverWindow(self.stylelayers["Project Locations"], "count");
             
         } else if(self.thematic_area == "extractives_controls") {
             jq('#project_count').html("282,595,781");
@@ -1244,10 +1298,10 @@ if(typeof(F1)=='undefined') {F1 = {};}
             self.toggleExtractive("Mines","all", true)
             self.toggleExtractive("Mineral deposits","all", false)
             self.toggleExtractive("Oil fields","all", true)     
+            self.map.setMapStyle( {zoom: { offset: {x:15,y:80}}} )
             self.setExtractiveIndicator('Mines','Total production','Production',true)
             self.map.addLayerCategoryFilter(11,{attribute:"Mineral type",categories:{"Gold":"http://maps.worldbank.org/images/icons/worldbank//extractives/small_gold.png","Bauxite":"http://maps.worldbank.org/images/icons/worldbank//extractives/small_bauxite.png","Manganese":"http://maps.worldbank.org/images/icons/worldbank//extractives/small_manganese.png","Other":"http://maps.worldbank.org/images/icons/worldbank/extractives/small_other.png"}})               
             self.minesPieChart() 
-            self.map.setStyle( {zoom: { offset: {x:65,y:80}}} )
         }
         self.loadState();
         jq("#map-summary").show();
@@ -1255,7 +1309,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
         if(self.projects !== undefined && self.projects !== null && self.projects.length != 0) {
             self.sortProjects(self.projects);
             self.projectTable(self.projects);
-        log("sortProjects");
+            log("sortProjects");
             // self.projectFundingBars();
             self.sectorPieChart("all", false);
             self.toggleSector("all", true, false);
@@ -1275,16 +1329,17 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  log("styleWorldMap styled")
 	  self.sectorPieChart("all", false);
 	  self.regionFundingBars();
-      self.map.setStyle( {infowindow: {visible: false}});
-	  self.map.setCallback("onFeatureSelected", function(features){ var country = JSON.parse(features.features)[0]; window.location = "/" + country.region.toLowerCase() + "/" + country.country.toLowerCase().replace(/\s+/,'-') });
-	  self.map.swf.setLayerTooltip( 0, {title: "$[country] has $[project count] projects\nClick to open the country map."} )
-	  self.map.setCallback("onFeatureHover", function(feature) { console.log(feature)})
+	  self.hoverWindow(0, "$[country] has $[project count] projects.<br />Click to view the country map.")
+      self.map.setMapStyle( {infowindow: {visible: false}});
+	  //self.map.setCallback("onFeatureSelected", function(features){ var country = features.features[0]; window.location = "/" + country.region.toLowerCase() + "/" + country.country.toLowerCase().replace(/\s+/,'-') });
+
+      // self.map.setCallback("onFeatureHover", function(feature) { console.log(feature)})
 	  if(self.country != "World") {
 		// self.map.addLayerCategoryFilter(0, {attribute:major_sector_name,categories:self.wbicons});
 	  } else if (self.country == "World") {
-		self.map.addLayerInfoWindowFilter(0, {title: "$[country]", subtitle: "$[project count] projects" , tabs: [{title:"About", type: "text", value: "You can explore the growing list of available project profiles of World Bank activities across the world. $[description]"}]}); }
+		self.map.setLayerInfoWindow(0, {title: "$[country]", subtitle: "$[project count] projects" , tabs: [{title:"About", type: "text", value: "You can explore the growing list of available project profiles of World Bank activities across the world. $[description]"}]}); }
 	  // else
-	  //   self.map.addLayerInfoWindowFilter(0, {"title": "$[project title]","subtitle": "$[country]- $[sector1]","tabs": [{"title": "Financing","type": "text","value": "Project ID: \u003Ca target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627\u0026piPK=73230\u0026theSitePK=40941\u0026menuPK=228424\u0026Projectid=$[project id]'\u003E$[project id]\u003C/a\u003E\nProject Name: $[project title]\nSector:$[sector1]\nTotal Amount: $ $[total amt]million"},{"title": "Location","type": "text","value": "Country: $[country]\nProvince: $[adm1]\nDistrict: $[adm2]\nLatitude:$[latitude]\nLongitude:$[longitude]"}]})
+	  //   self.map.setLayerInfoWindow(0, {"title": "$[project title]","subtitle": "$[country]- $[sector1]","tabs": [{"title": "Financing","type": "text","value": "Project ID: \u003Ca target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627\u0026piPK=73230\u0026theSitePK=40941\u0026menuPK=228424\u0026Projectid=$[project id]'\u003E$[project id]\u003C/a\u003E\nProject Name: $[project title]\nSector:$[sector1]\nTotal Amount: $ $[total amt]million"},{"title": "Location","type": "text","value": "Country: $[country]\nProvince: $[adm1]\nDistrict: $[adm2]\nLatitude:$[latitude]\nLongitude:$[longitude]"}]})
 		
 	  self.hideLoading();
   },
