--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -15,7 +15,6 @@ body{
 	color: #333;
 	padding: 0 10px 10px;
 }
-div{position: relative;}
 a, a:visited{
 	color: #840202;
 	text-decoration: none;
@@ -309,7 +308,7 @@ ul.links li, ul.links li a{
 	height: 47px;
 	margin: 0;
 	position: absolute;
-	width: 100%;
+	width: 780px;
 	z-index: 10;
 }
 #map-content-hdr3 { margin-top:45px; z-index: 9;}
@@ -342,6 +341,7 @@ ul.links li, ul.links li a{
 .ie7 #map-content-icons ul li.s11{
 	padding-top: 0;
 }
+#infodiv span {opacity: 1.0; color: #FFF; padding: 4px ;}
 .radio-prov{
 	color: #777876;
 	float: left;
