--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= @page_title = (@page_subtitle || "") + 'The World Bank - ' + (@title || "Mapping for Results") %></title>
-    <meta name="description" content="<%= @page.hierarchy.reverse.collect {|c| c.name}.join(",") %>,health,poverty,millenium developemnt goals,indicators,development,humanitarian">
+    <meta name="keywords" content="<%= @page.hierarchy.reverse.collect {|c| c.name}.join(",") %>,health,poverty,millenium development goals,indicators,development,humanitarian">
     <meta name="author" content="World Bank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="<%= PLATFORM_API_URL %>/favicon.ico">
@@ -96,7 +96,7 @@
         <%= partial @additional_controls %>
         </div>
         <% end %>
-        <div style="height: 530px;" id="wb_map_wrapper"><div id="wb_map" class="" style="height: 520px"></div></div>
+        <div style="height: 530px;" id="wb_map_wrapper"><div id="wb_map" class="" style="height: 520px; position: relative"></div></div>
       </div>
         <%= partial :projects_table if @page.page_type == "country" %>
         </div><!--#main-map//-->
