--- a/m4r/views/charts.erb
+++ b/m4r/views/charts.erb
@@ -4,7 +4,7 @@
   </div>
   <div id="chart-left-stat">
     <h1 id="sector_funding_total"></h1>
-    <h2 id="sector_funding_description"></h2>
+    <h2 id="sector_funding_description" style="display:none"></h2>
   </div>
   <div id="chart-left-pie-chart"></div>
 </div>
