Fixing Ghana Extractives

--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -422,7 +422,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
             self.map.showLayer(self.stylelayers[layer].order, true);
             
             self.map.addFilter(self.stylelayers[layer].order, 
-                {expression: self.complexFilterExpression(visibleDeposits, "Mineral type")});
+                {expression: self.complexFilterExpression(visibleDeposits, "mineral type")});
         } else {
             self.map.showLayer(self.stylelayers[layer].order, false);
         }
@@ -438,7 +438,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
         if(visibleDeposits.length != 0 ){
             self.map.showLayer(self.stylelayers[layer].order, true);
             self.map.addFilter(self.stylelayers[layer].order, 
-                {expression: self.complexFilterExpression(visibleDeposits, "Mineral type")});             
+                {expression: self.complexFilterExpression(visibleDeposits, "mineral type")});             
         } else {
             self.map.showLayer(self.stylelayers[layer].order, false);
         }
@@ -958,7 +958,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		var links = []
         jq.each(mineral_type, function(type,amount) {
             minerals.push({"Mineral type": type, "Total_government_receipts": amount})
-            links.push("javascript:wb.highlightMine('Mineral type', '" + type + "');")
+            links.push("javascript:wb.highlightMine('mineral type', '" + type + "');")
         })
         pie_options = {"features":minerals, 
         "attributes": {"data":{"name": "Total government receipts","original_name": "Total_government_receipts"},
